--- a/privacy/index.html
+++ b/privacy/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Privacy Policy | Silhouette</title>
     <link href="../style/doc.css" rel="stylesheet" type="text/css" />
 	<meta name="description" content="Privacy Policy for Silhouette and its affiliates. The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio by secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
@@ -21,6 +21,14 @@
 	<link rel="icon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	
+	<meta property="og:title" content="Silhouette" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.silhouette.gq/privacy" />
+	<meta property="og:image" content="https://www.silhouette.gq/favicons/thumbnail.png" />
+	<meta property="og:site_name" content="Silhouette" />
+	<meta property="og:locale" content="en_US">
+	
 	<!-- Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141698745-1"></script>
 	<script>
@@ -32,7 +40,7 @@
 	</script>
   </head>
   <body>
-  <div id=load><div></div></div>
+  <div id=load><div id="load-record"><div id="load-1"></div><div class="load-rotate" id="load-2"></div><div class="load-rotate" id="load-3"></div><div class="load-rotate" id="load-4"></div></div></div>
   <h1>Privacy Policy</h1>
   <h2>Silhouette Privacy Statement</h2>
   <p>At Silhouette we value the communities that gather around our brands and take pride in bringing you premium content worthy of your attention. It’s important to us that whatever we are bringing you, whether it’s the latest news, hit music or in-depth conversation, it’s what you want and its meaningful to you. But to give you more of what you want we need to understand you. This means, with your permission, using the information that you give us to make sure our products and services are on point.</p>
