--- a/developer/index.html
+++ b/developer/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Developer Portal | Silhouette</title>
     <link href="../style/doc.css" rel="stylesheet" type="text/css" />
 	<meta name="description" content="Developer options and quirks for adding Silhouette to your website or stream. The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio by secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
@@ -21,6 +21,14 @@
 	<link rel="icon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	
+	<meta property="og:title" content="Silhouette" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.silhouette.gq/developer" />
+	<meta property="og:image" content="https://www.silhouette.gq/favicons/thumbnail.png" />
+	<meta property="og:site_name" content="Silhouette" />
+	<meta property="og:locale" content="en_US">
+	
 	<!-- Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141698745-1"></script>
 	<script>
@@ -32,7 +40,7 @@
 	</script>
   </head>
   <body>
-  <div id=load><div></div></div>
+  <div id=load><div id="load-record"><div id="load-1"></div><div class="load-rotate" id="load-2"></div><div class="load-rotate" id="load-3"></div><div class="load-rotate" id="load-4"></div></div></div>
   <h1>Developer Portal</h1>
   <h2>Use Silhouette in an OBS Livestream</h2>
   <p style="text-align: center">Use Silhouette in your Livestream! Instant 24/7 music for your gameplay or talkshows. Let's get started.</p>
