--- a/legal/index.html
+++ b/legal/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Legal | Silhouette</title>
     <link href="../style/doc.css" rel="stylesheet" type="text/css" />
 	<meta name="description" content="Terms of Use for Silhouette and its affiliates. The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio by secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
@@ -21,6 +21,14 @@
 	<link rel="icon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	
+	<meta property="og:title" content="Silhouette" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.silhouette.gq/legal" />
+	<meta property="og:image" content="https://www.silhouette.gq/favicons/thumbnail.png" />
+	<meta property="og:site_name" content="Silhouette" />
+	<meta property="og:locale" content="en_US">
+	
 	<!-- Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141698745-1"></script>
 	<script>
@@ -32,7 +40,7 @@
 	</script>
   </head>
   <body>
-  <div id=load><div></div></div>
+  <div id=load><div id="load-record"><div id="load-1"></div><div class="load-rotate" id="load-2"></div><div class="load-rotate" id="load-3"></div><div class="load-rotate" id="load-4"></div></div></div>
   <h1>Terms of Use</h1>
   <h3>Disclaimer</h3>
   <p>Silhouette is technically a hobbyist project undertaken by the <a>eyezah development group</a>. Although Silhouette attempts to function and perform as professionally as possible, it is not a company or official organization.
