--- a/mobile/index.html
+++ b/mobile/index.html
@@ -21,6 +21,14 @@
 	<link rel="icon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	
+	<meta property="og:title" content="Silhouette" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.silhouette.gq" />
+	<meta property="og:image" content="https://www.silhouette.gq/favicons/thumbnail.png" />
+	<meta property="og:site_name" content="Silhouette" />
+	<meta property="og:locale" content="en_US">
+	
   </head>
   <body>
     <audio id=stream src="http://listen.openstream.co/3813/audio" autostart="0"></audio>
