--- a/404.html
+++ b/404.html
@@ -11,16 +11,16 @@ permalink: /404.html
     <link href="https://www.silhouette.gq/style/404.css" rel="stylesheet" type="text/css" />
 	<meta name="description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio for secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="./favicons/android-chrome-192x192.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
-	<link rel="manifest" href="./favicons/site.webmanifest">
-	<link rel="mask-icon" href="./favicons/safari-pinned-tab.svg" color="#ff0000">
-	<link rel="shortcut icon" href="./favicons/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://www.silhouette.gq/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://www.silhouette.gq/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="https://www.silhouette.gq/favicons/android-chrome-192x192.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://www.silhouette.gq/favicons/favicon-16x16.png">
+	<link rel="manifest" href="https://www.silhouette.gq/favicons/site.webmanifest">
+	<link rel="mask-icon" href="https://www.silhouette.gq/favicons/safari-pinned-tab.svg" color="#ff0000">
+	<link rel="shortcut icon" href="https://www.silhouette.gq/favicons/favicon.ico">
 	<meta name="msapplication-TileColor" content="#000000">
-	<meta name="msapplication-TileImage" content="./favicons/mstile-144x144.png">
-	<meta name="msapplication-config" content="./favicons/browserconfig.xml">
+	<meta name="msapplication-TileImage" content="https://www.silhouette.gq/favicons/mstile-144x144.png">
+	<meta name="msapplication-config" content="https://www.silhouette.gq/favicons/browserconfig.xml">
 	<meta name="theme-color" content="#000000">
 	<link rel="icon" type="image/png" href="https://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="favicon" type="image/png" href="https://www.silhouette.gq/favicons/favicon.ico">
