--- a/index.html
+++ b/index.html
@@ -338,10 +338,11 @@
 	<div id=fifth>
 	  <h1 id=shows-title>Music</h1>
 	  <div id=shows style="position:relative;top:-300px"></div>
-	  <div class=fifth-show style="background-image: url('./style/images/shows/Tripsketch.jpg')"><div class=fifth-anchor id=tripsketch></div></div>
-	  <div class=fifth-show style="background-image: url('./style/images/shows/Evening Chill.jpg')"><div class=fifth-anchor id=eveningchill></div></div>
-	  <div class=fifth-show style="background-image: url('./style/images/shows/Woke.jpg')"><div class=fifth-anchor id=woke></div></div>
+	  <div class=fifth-show style="background-image: url('./style/images/shows/Highway.jpg')"><div class=fifth-anchor id=highway></div></div>
 	  <div class=fifth-show style="background-image: url('./style/images/shows/Vaporwave.jpg')"><div class=fifth-anchor id=vaporwave></div></div>
+	  <div class=fifth-show style="background-image: url('./style/images/shows/Tripsketch.jpg')"><div class=fifth-anchor id=tripsketch></div></div>
+	  <div class=fifth-show style="background-image: url('./style/images/shows/Woke.jpg')"><div class=fifth-anchor id=woke></div></div>
+	  <div class=fifth-show style="background-image: url('./style/images/shows/Evening Chill.jpg')"><div class=fifth-anchor id=eveningchill></div></div>
 	</div>
 	<br>
 	<br>
