--- a/index.html
+++ b/index.html
@@ -124,8 +124,10 @@
 	  <div style="text-align: center;">
 	    <h1>Upcoming Events</h1>
 	  </div>
-	  <div class=fourth-event><div style="background-image: url('./style/images/shows/development.png')"></div><h2>Development</h2><p>We're still in the alpha stages. We're still ironing out the bugs and scripting, to provide you with 24/7 entertainment consisting of shows, new tracks, and live music. It's a long process, so bear with us here.</p></div>
-	  <div class=fourth-event><div style="background-image: url('./style/images/shows/hosttrial.png')"></div><h2>Host Trial</h2><p>See yourself as an aspiring radio host? Give yourself a shot at Silhouette! We're currently accepting host trials and experimental shows, so this might be your chance to get yourself on air. Have your voice heard. Here, at Silhouette. <a onClick="window.open('http://www.silhouette.gq/jobs','_blank')">Learn More</a></p></div>
+	  <div class=fourth-event><div style="background-image: url('./style/images/events/development.png')"></div><h2>Development</h2><p>We're still in the alpha stages. We're still ironing out the bugs and scripting, to provide you with 24/7 entertainment consisting of shows, new tracks, and live music. It's a long process, so bear with us here.</p></div>
+	  <div class=fourth-event><div style="background-image: url('./style/images/events/hosttrial.png')"></div><h2>Host Trial</h2><p>See yourself as an aspiring radio host? Give yourself a shot at Silhouette! We're currently accepting host trials and experimental shows, so this might be your chance to get yourself on air. Have your voice heard. Here, at Silhouette. <a onClick="window.open('http://www.silhouette.gq/jobs','_blank')">Learn More</a></p></div>
+	  <div id=deadbeats class=fifth-anchor></div>
+	  <div class=fourth-event><div style="background-image: url('./style/images/deadbeats/Vaporwave.jpg')"></div><h2>Deadbeats W/ the Ghost DJ</h2><p>The Ghost DJ's picks for Deadbeats: Vaporwave. Listen in from 23:00 to 3:00 every night.</p></div>
 	</div>
 	<div id=third-calendarcontainer>
 	  <div id=third-cover></div>
@@ -135,11 +137,11 @@
 	    <div class=third-day>
 		  <h1>Mon</h1>
       <div class="third-day-button" onClick="dayOpen(1)"></div>
-		  <a href="#vaporwave"><span class=third-time>00:00</span> - <span class=calendar id=mon-00>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>01:00</span> - <span class=calendar id=mon-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>02:00</span> - <span class=calendar id=mon-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>03:00</span> - <span class=calendar id=mon-03>Vaporwave</span></a>
-		  <a href="#tripsketch"><span class=third-time>04:00</span> - <span class=calendar id=mon-04>Tripsketch</span></a>
+		  <a href="#deadbeats"><span class=third-time>00:00</span> - <span class=calendar id=mon-00>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>01:00</span> - <span class=calendar id=mon-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>02:00</span> - <span class=calendar id=mon-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>03:00</span> - <span class=calendar id=mon-03>Deadbeats</span></a>
+		  <a href="#woke"><span class=third-time>04:00</span> - <span class=calendar id=mon-04>Woke</span></a>
 		  <a href="#woke"><span class=third-time>05:00</span> - <span class=calendar id=mon-05>Woke</span></a>
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=mon-06>Woke</span></a>
 		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=mon-07>Woke</span></a>
@@ -158,16 +160,16 @@
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=mon-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=mon-21>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=mon-22>Evening Chill</span></a>
-		  <a href="#vaporwave"><span class=third-time>23:00</span> - <span class=calendar id=mon-23>Vaporwave</span></a>
+		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=mon-23>Deadbeats</span></a>
 		</div>
 	    <div class=third-day>
 		  <h1>Tue</h1>
       <div class="third-day-button" onClick="dayOpen(2)"></div>
-		  <a href="#vaporwave"><span class=third-time>00:00</span> - <span class=calendar id=tue-00>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>01:00</span> - <span class=calendar id=tue-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>02:00</span> - <span class=calendar id=tue-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>03:00</span> - <span class=calendar id=tue-03>Vaporwave</span></a>
-		  <a href="#tripsketch"><span class=third-time>04:00</span> - <span class=calendar id=tue-04>Tripsketch</span></a>
+		  <a href="#deadbeats"><span class=third-time>00:00</span> - <span class=calendar id=tue-00>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>01:00</span> - <span class=calendar id=tue-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>02:00</span> - <span class=calendar id=tue-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>03:00</span> - <span class=calendar id=tue-03>Deadbeats</span></a>
+		  <a href="#woke"><span class=third-time>04:00</span> - <span class=calendar id=tue-04>Woke</span></a>
 		  <a href="#woke"><span class=third-time>05:00</span> - <span class=calendar id=tue-05>Woke</span></a>
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=tue-06>Woke</span></a>
 		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=tue-07>Woke</span></a>
@@ -186,16 +188,16 @@
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=tue-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=tue-21>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=tue-22>Evening Chill</span></a>
-		  <a href="#vaporwave"><span class=third-time>23:00</span> - <span class=calendar id=tue-23>Vaporwave</span></a>
+		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=tue-23>Deadbeats</span></a>
 		</div>
 	    <div class=third-day>
 		  <h1>Wed</h1>
       <div class="third-day-button" onClick="dayOpen(3)"></div>
-		  <a href="#vaporwave"><span class=third-time>00:00</span> - <span class=calendar id=wed-00>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>01:00</span> - <span class=calendar id=wed-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>02:00</span> - <span class=calendar id=wed-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>03:00</span> - <span class=calendar id=wed-03>Vaporwave</span></a>
-		  <a href="#tripsketch"><span class=third-time>04:00</span> - <span class=calendar id=wed-04>Tripsketch</span></a>
+		  <a href="#deadbeats"><span class=third-time>00:00</span> - <span class=calendar id=wed-00>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>01:00</span> - <span class=calendar id=wed-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>02:00</span> - <span class=calendar id=wed-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>03:00</span> - <span class=calendar id=wed-03>Deadbeats</span></a>
+		  <a href="#woke"><span class=third-time>04:00</span> - <span class=calendar id=wed-04>Woke</span></a>
 		  <a href="#woke"><span class=third-time>05:00</span> - <span class=calendar id=wed-05>Woke</span></a>
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=wed-06>Woke</span></a>
 		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=wed-07>Woke</span></a>
@@ -214,16 +216,16 @@
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=wed-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=wed-21>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=wed-22>Evening Chill</span></a>
-		  <a href="#vaporwave"><span class=third-time>23:00</span> - <span class=calendar id=wed-23>Vaporwave</span></a>
+		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=wed-23>Deadbeats</span></a>
 		</div>
 	    <div class=third-day>
 		  <h1>Thu</h1>
       <div class="third-day-button" onClick="dayOpen(4)"></div>
-		  <a href="#vaporwave"><span class=third-time>00:00</span> - <span class=calendar id=thu-00>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>01:00</span> - <span class=calendar id=thu-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>02:00</span> - <span class=calendar id=thu-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>03:00</span> - <span class=calendar id=thu-03>Vaporwave</span></a>
-		  <a href="#tripsketch"><span class=third-time>04:00</span> - <span class=calendar id=thu-04>Tripsketch</span></a>
+		  <a href="#deadbeats"><span class=third-time>00:00</span> - <span class=calendar id=thu-00>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>01:00</span> - <span class=calendar id=thu-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>02:00</span> - <span class=calendar id=thu-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>03:00</span> - <span class=calendar id=thu-03>Deadbeats</span></a>
+		  <a href="#woke"><span class=third-time>04:00</span> - <span class=calendar id=thu-04>Woke</span></a>
 		  <a href="#woke"><span class=third-time>05:00</span> - <span class=calendar id=thu-05>Woke</span></a>
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=thu-06>Woke</span></a>
 		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=thu-07>Woke</span></a>
@@ -242,16 +244,16 @@
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=thu-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=thu-21>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=thu-22>Evening Chill</span></a>
-		  <a href="#vaporwave"><span class=third-time>23:00</span> - <span class=calendar id=thu-23>Vaporwave</span></a>
+		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=thu-23>Deadbeats</span></a>
 		</div>
 	    <div class=third-day>
 		  <h1>Fri</h1>
       <div class="third-day-button" onClick="dayOpen(5)"></div>
-		  <a href="#vaporwave"><span class=third-time>00:00</span> - <span class=calendar id=fri-00>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>01:00</span> - <span class=calendar id=fri-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>02:00</span> - <span class=calendar id=fri-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>03:00</span> - <span class=calendar id=fri-03>Vaporwave</span></a>
-		  <a href="#tripsketch"><span class=third-time>04:00</span> - <span class=calendar id=fri-04>Tripsketch</span></a>
+		  <a href="#deadbeats"><span class=third-time>00:00</span> - <span class=calendar id=fri-00>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>01:00</span> - <span class=calendar id=fri-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>02:00</span> - <span class=calendar id=fri-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>03:00</span> - <span class=calendar id=fri-03>Deadbeats</span></a>
+		  <a href="#woke"><span class=third-time>04:00</span> - <span class=calendar id=fri-04>Woke</span></a>
 		  <a href="#woke"><span class=third-time>05:00</span> - <span class=calendar id=fri-05>Woke</span></a>
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=fri-06>Woke</span></a>
 		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=fri-07>Woke</span></a>
@@ -270,16 +272,16 @@
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=fri-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=fri-21>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=fri-22>Evening Chill</span></a>
-		  <a href="#vaporwave"><span class=third-time>23:00</span> - <span class=calendar id=fri-23>Vaporwave</span></a>
+		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=fri-23>Deadbeats</span></a>
 		</div>
 	    <div class=third-day>
 		  <h1>Sat</h1>
       <div class="third-day-button" onClick="dayOpen(6)"></div>
-		  <a href="#vaporwave"><span class=third-time>00:00</span> - <span class=calendar id=sat-00>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>01:00</span> - <span class=calendar id=sat-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>02:00</span> - <span class=calendar id=sat-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>03:00</span> - <span class=calendar id=sat-03>Vaporwave</span></a>
-		  <a href="#tripsketch"><span class=third-time>04:00</span> - <span class=calendar id=sat-04>Tripsketch</span></a>
+		  <a href="#deadbeats"><span class=third-time>00:00</span> - <span class=calendar id=sat-00>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>01:00</span> - <span class=calendar id=sat-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>02:00</span> - <span class=calendar id=sat-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>03:00</span> - <span class=calendar id=sat-03>Deadbeats</span></a>
+		  <a href="#woke"><span class=third-time>04:00</span> - <span class=calendar id=sat-04>Woke</span></a>
 		  <a href="#woke"><span class=third-time>05:00</span> - <span class=calendar id=sat-05>Woke</span></a>
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=sat-06>Woke</span></a>
 		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=sat-07>Woke</span></a>
@@ -298,16 +300,16 @@
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=sat-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=sat-21>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=sat-22>Evening Chill</span></a>
-		  <a href="#vaporwave"><span class=third-time>23:00</span> - <span class=calendar id=sat-23>Vaporwave</span></a>
+		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=sat-23>Deadbeats</span></a>
 		</div>
 	    <div class=third-day>
 		  <h1>Sun</h1>
       <div class="third-day-button" onClick="dayOpen(7)"></div>
-		  <a href="#vaporwave"><span class=third-time>00:00</span> - <span class=calendar id=sun-00>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>01:00</span> - <span class=calendar id=sun-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>02:00</span> - <span class=calendar id=sun-01>Vaporwave</span></a>
-		  <a href="#vaporwave"><span class=third-time>03:00</span> - <span class=calendar id=sun-03>Vaporwave</span></a>
-		  <a href="#tripsketch"><span class=third-time>04:00</span> - <span class=calendar id=sun-04>Tripsketch</span></a>
+		  <a href="#deadbeats"><span class=third-time>00:00</span> - <span class=calendar id=sun-00>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>01:00</span> - <span class=calendar id=sun-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>02:00</span> - <span class=calendar id=sun-01>Deadbeats</span></a>
+		  <a href="#deadbeats"><span class=third-time>03:00</span> - <span class=calendar id=sun-03>Deadbeats</span></a>
+		  <a href="#woke"><span class=third-time>04:00</span> - <span class=calendar id=sun-04>Woke</span></a>
 		  <a href="#woke"><span class=third-time>05:00</span> - <span class=calendar id=sun-05>Woke</span></a>
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=sun-06>Woke</span></a>
 		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=sun-07>Woke</span></a>
@@ -326,7 +328,7 @@
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=sun-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=sun-21>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=sun-22>Evening Chill</span></a>
-		  <a href="#vaporwave"><span class=third-time>23:00</span> - <span class=calendar id=sun-23>Vaporwave</span></a>
+		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=sun-23>Deadbeats</span></a>
 		</div>
 	  </div>
 	</div>
@@ -338,11 +340,9 @@
 	<div id=fifth>
 	  <h1 id=shows-title>Music</h1>
 	  <div id=shows style="position:relative;top:-300px"></div>
-	  <div class=fifth-show style="background-image: url('./style/images/shows/Highway.jpg')"><div class=fifth-anchor id=highway></div></div>
-	  <div class=fifth-show style="background-image: url('./style/images/shows/Vaporwave.jpg')"><div class=fifth-anchor id=vaporwave></div></div>
-	  <div class=fifth-show style="background-image: url('./style/images/shows/Tripsketch.jpg')"><div class=fifth-anchor id=tripsketch></div></div>
-	  <div class=fifth-show style="background-image: url('./style/images/shows/Woke.jpg')"><div class=fifth-anchor id=woke></div></div>
-	  <div class=fifth-show style="background-image: url('./style/images/shows/Evening Chill.jpg')"><div class=fifth-anchor id=eveningchill></div></div>
+	  <div class=fifth-show style="background-image: url('./style/images/music/Highway.jpg')"><div class=fifth-anchor id=highway></div></div>
+	  <div class=fifth-show style="background-image: url('./style/images/music/Woke.jpg')"><div class=fifth-anchor id=woke></div></div>
+	  <div class=fifth-show style="background-image: url('./style/images/music/Evening Chill.jpg')"><div class=fifth-anchor id=eveningchill></div></div>
 	</div>
 	<br>
 	<br>
