--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
   <body>
   <div id=load><div id="load-record"><div id="load-1"></div><div class="load-rotate" id="load-2"></div><div class="load-rotate" id="load-3"></div><div class="load-rotate" id="load-4"></div></div></div>
   <div style="scroll-behavior:smooth">
-    <audio id=stream src="https://str2b.openstream.co/1035?aw_0_1st.stationid=3849&aw_0_1st.publisherId=1059&aw_0_1st.serverId=str2b" autostart="0"></audio>
-	<!--<audio id=stream2 src="https://str2b.openstream.co/1036?aw_0_1st.stationid=3850&aw_0_1st.publisherId=1060&aw_0_1st.serverId=str2b" autostart="0"></audio>-->
+    <audio id=stream src="https://str2b.openstream.co/1035?aw_0_1st.stationid=3849&aw_0_1st.publisherId=1059&aw_0_1st.serverId=str2b"></audio>
 	<div id=widthdetect></div>
 	<div id=scroll></div>
     <div id=navbar-completecontainer>
